Primeiro Commit: trilha RLAIF Destilação de datasets

--- a/distillation/contrastivo/example.ipynb
+++ b/distillation/contrastivo/example.ipynb
@@ -5,15 +5,103 @@
    "id": "a4180660",
    "metadata": {},
    "source": [
-    "### [RLCD: Reinforcement Learning from Contrastive Distillation for LM Alignment](https://arxiv.org/html/2307.12950v3)"
+    "### [RLCD: Reinforcement Learning from Contrastive Distillation for LM Alignment](https://arxiv.org/html/2307.12950v3)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "5ac001b0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\dev\\Track_RLAIF\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>prompt</th>\n",
+       "      <th>chosen</th>\n",
+       "      <th>rejected</th>\n",
+       "      <th>meta</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Explique para um leigo o que é uma vacina e po...</td>\n",
+       "      <td>Eu sei um vacina, que é um instrumento de vida...</td>\n",
+       "      <td>Eu sei um leite de vacina, que é importante pa...</td>\n",
+       "      <td>{'prompt_pos': 'Você é um assistente prestativ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Qual país do mundo é um bom exemplo de democra...</td>\n",
+       "      <td>Um, um, um. Um, um. Um, um. Um, um. Um, um. Um...</td>\n",
+       "      <td>Um, um, um, um, um, um, um, um, um, um, um, um...</td>\n",
+       "      <td>{'prompt_pos': 'Você é um assistente prestativ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Quais são os benefícios e riscos da inteligênc...</td>\n",
+       "      <td>O sistema de informação e o sistema de científ...</td>\n",
+       "      <td>O sistema de informação e o sistema de telefon...</td>\n",
+       "      <td>{'prompt_pos': 'Você é um assistente prestativ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              prompt  \\\n",
+       "0  Explique para um leigo o que é uma vacina e po...   \n",
+       "1  Qual país do mundo é um bom exemplo de democra...   \n",
+       "2  Quais são os benefícios e riscos da inteligênc...   \n",
+       "\n",
+       "                                              chosen  \\\n",
+       "0  Eu sei um vacina, que é um instrumento de vida...   \n",
+       "1  Um, um, um. Um, um. Um, um. Um, um. Um, um. Um...   \n",
+       "2  O sistema de informação e o sistema de científ...   \n",
+       "\n",
+       "                                            rejected  \\\n",
+       "0  Eu sei um leite de vacina, que é importante pa...   \n",
+       "1  Um, um, um, um, um, um, um, um, um, um, um, um...   \n",
+       "2  O sistema de informação e o sistema de telefon...   \n",
+       "\n",
+       "                                                meta  \n",
+       "0  {'prompt_pos': 'Você é um assistente prestativ...  \n",
+       "1  {'prompt_pos': 'Você é um assistente prestativ...  \n",
+       "2  {'prompt_pos': 'Você é um assistente prestativ...  "
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from transformers import AutoTokenizer, AutoModelForCausalLM\n",
     "import torch, json, os\n",
